fast/css3-text/css3-text-decoration/text-decoration-thickness.html fails on GTK https://bugs.webkit.org/show_bug.cgi?id=129957

Reviewed by Dean Jackson.

Source/WebCore:

Causes existing tests to pass.

* platform/graphics/cairo/GraphicsContextCG.cpp: Use the now-shared computeLineBoundsAndAntialiasingModeForText.
* platform/graphics/cairo/GraphicsContextCairo.cpp: Align the Cairo version of text underline drawing with the CG version.
* platform/graphics/GraphicsContext.h: Add computeLineBoundsAndAntialiasingModeForText.
* platform/graphics/GraphicsContext.cpp: Ditto.

LayoutTests:

Unskipped tests and modified one test to use the platform-independent Ahem font.

* fast/css3-text/css3-text-decoration/text-decoration-skip/text-decoration-skip-tall-underlines.html: We
need to use Ahem because Helvetica is not a platform-independent font.
* platform/gtk/TestExpectations: Unskipped tests.

Canonical link: https://commits.webkit.org/149387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166902 268f45cc-cd09-0410-ab3c-d52691b4dbfc